tests/baselines/reference/errorMessagesIntersectionTypes04.errors.txt
errorMessagesIntersectionTypes04.ts(17,5): error TS2322: Type 'A & B' is not assignable to type 'number'.
errorMessagesIntersectionTypes04.ts(18,5): error TS2322: Type 'A & B' is not assignable to type 'boolean'.
errorMessagesIntersectionTypes04.ts(19,5): error TS2322: Type 'A & B' is not assignable to type 'string'.


==== errorMessagesIntersectionTypes04.ts (3 errors) ====
    interface A {
        a;
    }
    
    interface B {
        b;
    }
    
    function f<T, U extends A, V extends U>(): void {
        let num: number;
        let bool: boolean;
        let str: string;
    
        let a_and_b: A & B;
        let num_and_bool: number & boolean;
    
        num = a_and_b;
        ~~~
!!! error TS2322: Type 'A & B' is not assignable to type 'number'.
        bool = a_and_b;
        ~~~~
!!! error TS2322: Type 'A & B' is not assignable to type 'boolean'.
        str = a_and_b;
        ~~~
!!! error TS2322: Type 'A & B' is not assignable to type 'string'.
    
        str = num_and_bool;
    }